--- a/modules/ROOT/pages/deployment/container/container-setup.adoc
+++ b/modules/ROOT/pages/deployment/container/container-setup.adoc
@@ -26,7 +26,7 @@
 :swarm-v-kub-2-url: https://vexxhost.com/blog/kubernetes-vs-docker-swarm-containerization-platforms/
 :helm-charts-ocis-url: https://github.com/owncloud/ocis-charts
 
-:description: Images for a container-based setup of oCIS are available on {docker-ocis-url}[Docker Hub]. You can easily download and start such an image with only a few commands. 
+:description: Images for a container-based setup of Infinite Scale are available on {docker-ocis-url}[Docker Hub]. You can easily download and start such an image with only a few commands. 
 
 == Introduction
 
@@ -36,7 +36,7 @@ This description mainly focuses on Docker which you can take as template or star
 
 == Docker Prerequisites
 
-To fetch and run oCIS in a Docker container, make sure the following packages are installed:
+To fetch and run Infinite Scale in a Docker container, make sure the following packages are installed:
 
 * docker,
 * docker-compose
@@ -96,7 +96,7 @@ If the group does not exist or you are not a member, continue with {docker-post-
 
 == Image Management
 
-=== Download the oCIS Image
+=== Download the Infinite Scale Image
 
 // fixme: things are gonna change: after a call with mbarz and cdegen it turns out that latest is not a good idea to use as latest will always point to the master (!) but not to a stable version. atm to use a stable version you would need to use a tag! most likely a "stable" tag will be introduced pointing to the latest stable release and latest will point to the latest master release. this will also be anncounced/described on dockerhub. this means that we have to review the commands below regarding installation, version and upgrade. see: https://github.com/owncloud/ocis/issues/3578 [Proposal] Use stable tag for most recent stable release of ocis
 
@@ -104,14 +104,14 @@ If the group does not exist or you are not a member, continue with {docker-post-
 
 To give some terminology guidance, images are unchangeable snapshots of live containers, while containers are running (or stopped) instances of an image.
 
-* To download the _latest_ oCIS image, run the following command. Note that this command will download the correct image suitable for your OS if available. For Windows, oCIS Docker images are not available, but might be in the future. The _latest_ tag always reflects the current master branch:
+* To download the _latest_ Infinite Scale image, run the following command. Note that this command will download the correct image suitable for your OS if available. For Windows, Infinite Scale Docker images are not available, but might be in the future. The _latest_ tag always reflects the current master branch:
 +
 [source,bash]
 ----
 sudo docker pull owncloud/ocis
 ----
 
-* Check your oCIS image with:
+* Check your Infinite Scale image with:
 +
 [source,bash]
 ----
@@ -126,7 +126,7 @@ REPOSITORY      TAG       IMAGE ID       CREATED       SIZE
 owncloud/ocis   latest    fc4151802141   9 hours ago   98.3MB
 ----
 
-* Check your oCIS version with the following command. Note that you need to have `jq` installed:
+* Check your Infinite Scale version with the following command. Note that you need to have `jq` installed:
 +
 [source,bash]
 ----
@@ -145,16 +145,16 @@ latest
 
 First check the current version of the image used with the command above and compare it with the versions available on {docker-ocis-url}[Docker Hub]. When a new image is available use these steps to upgrade the image:
 
-* xref:stop-a-running-container[Stop] the running oCIS container
+* xref:stop-a-running-container[Stop] the running Infinite Scale container
 * xref:remove-an-ocis-image[Remove] the actual image
 * xref:download-the-ocis-image[Download] the desired new image
-* xref:start-the-ocis-runtime[Start] the oCIS runtime
+* xref:start-the-ocis-runtime[Start] the Infinite Scale runtime
 
 For detailed commands see the corresponding sections.
 
-=== Remove an oCIS Image
+=== Remove an Infinite Scale Image
 
-If you want to remove an oCIS image, run the following command:
+If you want to remove an Infinite Scale image, run the following command:
 
 [source,bash]
 ----
@@ -175,9 +175,9 @@ Replace <image-id> with the ID you want to remove from the above printout:
 sudo docker rmi <image-id>
 ----
 
-== Start the oCIS Runtime
+== Start the Infinite Scale Runtime
 
-oCIS is started in two steps:
+Infinite Scale is started in two steps:
 
 * A first time start to initiate the system and
 * a recurring start after initialization.
@@ -191,7 +191,7 @@ In the examples shown below, bind mounts with the following folders are used to 
 * For the config we use the folder `~/ocis/ocis-config`.
 * For data we use the folder `~/ocis/ocis-data`.
 
-The oCIS container runs internally with the default user and group ID of 1000. To check this, type:
+The Infinite Scale container runs internally with the default user and group ID of 1000. To check this, type:
 
 [source,bash]
 ----
@@ -229,7 +229,7 @@ In this case, you need to access the content of the `ocis` folder with root priv
 
 === First Time Start
 
-oCIS needs a first time initialization to set up the environment. You will need to answer questions as basis for a default `ocis.yaml` file to be generated. This file you can edit later. Note that if you do not define a host directory with a bind mount as target location, the initial setup will get lost because the container ends after executing the command. ownCloud therefore recommends either using bind mounts or Docker volumes to make the initial setup, further changes and your data persistent.
+Infinite Scale needs a first time initialization to set up the environment. You will need to answer questions as basis for a default `ocis.yaml` file to be generated. This file you can edit later. Note that if you do not define a host directory with a bind mount as target location, the initial setup will get lost because the container ends after executing the command. ownCloud therefore recommends either using bind mounts or Docker volumes to make the initial setup, further changes and your data persistent.
 
 [source,bash]
 ----
@@ -242,9 +242,9 @@ On success, you will see a message like:
  
 include::partial$deployment/ocis_init.adoc[]
 
-=== Recurring Start of oCIS
+=== Recurring Start of Infinite Scale
 
-When you run the oCIS container, you _must_ specify at least the `OCIS_URL` as environment variable to have browser access. This is  because `localhost` would point to a location inside the container and not to the server being accessed. For details see: xref:deployment/general/general-info.adoc#configurations-to-access-the-webui[Configurations to Access the WebUI].
+When you run the Infinite Scale container, you _must_ specify at least the `OCIS_URL` as environment variable to have browser access. This is  because `localhost` would point to a location inside the container and not to the server being accessed. For details see: xref:deployment/general/general-info.adoc#configurations-to-access-the-webui[Configurations to Access the WebUI].
 
 In the example below, replace `<your-hostname>` with the host name or IP address of your server.
 
@@ -265,17 +265,17 @@ sudo docker run \
     owncloud/ocis
 ----
 
-To access oCIS, open your browser and type `\https://<your-hostname>:9200`.
+To access Infinite Scale, open your browser and type `\https://<your-hostname>:9200`.
 
-WARNING: While this is not used in production and for testing purposes only, you could run more than one oCIS runtime container concurrently. In such a case, you have to define different ports and data paths for each of the runtime containers to avoid unexpected behavior.
+WARNING: While this is not used in production and for testing purposes only, you could run more than one Infinite Scale runtime container concurrently. In such a case, you have to define different ports and data paths for each of the runtime containers to avoid unexpected behavior.
 
 === Delete a Setup
 
 If you want to delete your setup, which is _both_ the configuration and the data, just delete the `ocis-config` and the `ocis-data` folder and restart the process described in this chapter.
 
-== Execute oCIS Commands
+== Execute Infinite Scale Commands
 
-To execute oCIS commands, you have to enter the shell of the running container. To do so, xref:list-running-containers[list the running containers] first and type the following command replacing the <container-id> accordingly:
+To execute Infinite Scale commands, you have to enter the shell of the running container. To do so, xref:list-running-containers[list the running containers] first and type the following command replacing the <container-id> accordingly:
 
 [source,bash]
 ----
@@ -302,7 +302,7 @@ This keeps STDIN open to the container.
 Allocate a virtual terminal session within the container.
 
 --publish, -p: Publish a container's port(s) to the host::
-Defines the port mapping `<hostPort>:<containerPort>`. Use the port mapping if you want to access the dockerized oCIS web user interface.
+Defines the port mapping `<hostPort>:<containerPort>`. Use the port mapping if you want to access the dockerized Infinite Scale web user interface.
 
 --rm: Automatically remove the container when it exits::
 Tell the Docker daemon to clean up the container and remove the file system after the container exits.
@@ -317,10 +317,10 @@ By default, containers created with _docker run_ are given a random name like `s
 See the details in the _docker run_ documentation for available options. Consider `always` as a good starting point.
 
 --mount: Attach a filesystem mount to the container::
-{docker-mount-url}[Docker volumes] are completely managed by Docker and have no server OS dependency. See {docker-mount-nfs-url}[Create a service which creates an NFS volume] for an example. Note the volume mount target path `target=/var/lib/ocis` which uses the default oCIS data path if not otherwise defined. Note that the directory on the host must already exist, it will not be created. 
+{docker-mount-url}[Docker volumes] are completely managed by Docker and have no server OS dependency. See {docker-mount-nfs-url}[Create a service which creates an NFS volume] for an example. Note the volume mount target path `target=/var/lib/ocis` which uses the default Infinite Scale data path if not otherwise defined. Note that the directory on the host must already exist, it will not be created. 
 
 --volume, -v: Bind mount a volume::
-{docker-bindmount-url}[Bind mounts] depend on the directory structure and OS of your server. Use this type to mount a local directory of your OS. Example: `-v /some/host/dir:/var/lib/ocis`, which uses the default oCIS data path if not otherwise defined. If the bind-mount points to a directory that does not yet exist on the host, the directory will be created automatically using the user the docker _service_ runs with, usually the root user.
+{docker-bindmount-url}[Bind mounts] depend on the directory structure and OS of your server. Use this type to mount a local directory of your OS. Example: `-v /some/host/dir:/var/lib/ocis`, which uses the default Infinite Scale data path if not otherwise defined. If the bind-mount points to a directory that does not yet exist on the host, the directory will be created automatically using the user the docker _service_ runs with, usually the root user.
 +
 NOTE: The filesystem at your OS mount point must be a xref:prerequisites/prerequisites.adoc#filesystems-and-shared-storage[supported filesystem] which supports extended attributes.
 +
@@ -370,9 +370,9 @@ docker stop <container-id>
 docker restart <container-id>
 ----
 
-=== Autostart oCIS Runtime on Boot
+=== Autostart Infinite Scale Runtime on Boot
 
-To autostart oCIS when the server boots or reboots, some steps need to be performed.
+To autostart Infinite Scale when the server boots or reboots, some steps need to be performed.
 
 ==== Autostart the Docker Service
 
@@ -419,7 +419,7 @@ This should display an output like:
 
 If you are using bind mounts and want to ensure that you have e.g. a necessary NFS mount point up and running _before_ the Docker service and the container starts up, see xref:deployment/tips/useful_mount_tip.adoc[Start a Service After a Resource is Mounted].
 
-NOTE: This step can be an important measure, because if the container starts up but the necessary mount point is not available, you may be in an undefined oCIS operating state.
+NOTE: This step can be an important measure, because if the container starts up but the necessary mount point is not available, you may be in an undefined Infinite Scale operating state.
 
 ==== Autostart the Container
 
@@ -444,11 +444,100 @@ In a nutshell, you have to create a Docker network and reference this network in
 
 === Docker Compose
 
-Similar to when using _docker run_ and handing over command-line parameters for a single container, you can define a `docker-compose.yml` yaml file which defines all the environment variables for each container in one file. This is the next step of multi-container environments. When the configuration is done, start the application stack with `docker-compose up -d`. For more details see {docker-compose-url}[Docker Compose].
+Similar to when using _docker run_ and handing over command-line parameters for a single container, you can define a `docker-compose.yml` yaml file which defines all the environment variables for each container in one file. This is the next step of multi-container environments.
 
-=== Example Compose Files
+Create a project directory, e.g. `ocis-compose`. Depending on your deployment intentions, pick configurations from our {compose-examples-url}[example docker compose] files or a complete stack.
 
-ownCloud provides some {compose-examples-url}[example docker compose] files as a starting point and guidance for your own setup. Change the data according your needs. Check the oCIS version when using a template for production environments.
+These are bundles of containers. For example, https://owncloud.dev/ocis/deployment/ocis_keycloak/[ocis_keycloak] delivers Keycloak and Infinite Scale, running behind Traefik as reverse proxy. Traefik generates self-signed certificates for a local setup or obtains valid SSL certificates for a server setup. Keycloak acts as Identity Provider (IDP) and comes with a PostgreSQL database. In total, this stack consists of four containers.
+
+In this example, you'll need three domains set up. For experimenting with a local setup, you may want to simply add them to your `/etc/hosts` file.
+
+[source,plaintext]
+----
+127.0.0.1 ocis.owncloud.test
+127.0.0.1 traefik.owncloud.test
+127.0.0.1 keycloak.owncloud.test
+----
+
+Download the `ocis_keycloak` files from GitHub into your project directory. Open the file .env in a text editor and adjust the environment variables according to your wishes. The default configuration looks like this:
+
+[source,plaintext]
+----
+# If you're on a internet facing server please comment out following line.
+# It skips certificate validation for various parts of oCIS and is needed if you use self signed certificates.
+INSECURE=true
+
+# The demo users should not be created on a production instance
+# because their passwords are public
+DEMO_USERS=false
+
+### Traefik settings ###
+# Serve Traefik dashboard. Defaults to "false".
+TRAEFIK_DASHBOARD=
+# Domain of Traefik, where you can find the dashboard. Defaults to "traefik.owncloud.test"
+TRAEFIK_DOMAIN=
+# Basic authentication for the dashboard. Defaults to user "admin" and password "admin"
+TRAEFIK_BASIC_AUTH_USERS=
+# Email address for obtaining LetsEncrypt certificates, needs only be changed if this is a public facing server
+TRAEFIK_ACME_MAIL=
+
+### oCIS settings ###
+# oCIS version. Defaults to "latest"
+OCIS_DOCKER_TAG=
+# Domain of oCIS, where you can find the frontend. Defaults to "ocis.owncloud.test"
+OCIS_DOMAIN=
+# owncloud Web openid connect client id. Defaults to "web"
+OCIS_OIDC_CLIENT_ID=
+# IDP LDAP bind password. Must be changed in order to have a secure oCIS. Defaults to "idp".
+IDP_LDAP_BIND_PASSWORD=
+# Storage LDAP bind password. Must be changed in order to have a secure oCIS. Defaults to "reva".
+STORAGE_LDAP_BIND_PASSWORD=
+# JWT secret which is used for the storage provider. Must be changed in order to have a secure oCIS. Defaults to "Pive-Fumkiu4"
+OCIS_JWT_SECRET=
+# JWT secret which is used for uploads to create transfer tokens. Must be changed in order to have a secure oCIS. Defaults to "replace-me-with-a-transfer-secret"
+STORAGE_TRANSFER_SECRET=
+# Machine auth api key secret. Must be changed in order to have a secure oCIS. Defaults to "change-me-please"
+OCIS_MACHINE_AUTH_API_KEY=
+
+### Keycloak ###
+# Domain of Keycloak, where you can find the management and authentication frontend. Defaults to "keycloak.owncloud.test"
+KEYCLOAK_DOMAIN=
+# Realm which to be used with oCIS. Defaults to "oCIS"
+KEYCLOAK_REALM=
+# Admin user login name. Defaults to "admin"
+KEYCLOAK_ADMIN_USER=
+# Admin user login password. Defaults to "admin"
+KEYCLOAK_ADMIN_PASSWORD=
+
+# If you want to use debugging and tracing with this stack,
+# you need uncomment following line. Please see documentation at
+# https://owncloud.dev/ocis/deployment/monitoring-tracing/
+#COMPOSE_FILE=docker-compose.yml:monitoring_tracing/docker-compose-additions.yml
+----
+
+If you are installing Infinite Scale on a server and Traefik will obtain valid certificates for you, remove `INSECURE=true` or set it to `false`.
+
+If you want to use the Traefik dashboard, set `TRAEFIK_DASHBOARD=true`. Default is `false` and therefore the dashboard is not active. If you activate it, you must set a domain for the Traefik dashboard in `TRAEFIK_DOMAIN=`, e.g. `TRAEFIK_DOMAIN=traefik.owncloud.test`.
+
+The Traefik dashboard is secured by basic auth. Default credentials are the user `admin` with the password admin. To set your own credentials, generate a htpasswd, e.g. by using an https://htpasswdgenerator.de/[online tool] or a command line tool.
+
+Traefik will issue certificates with LetsEncrypt and therefore you must set an email address in `TRAEFIK_ACME_MAIL=`.
+
+By default Infinite Scale will be started in the latest version. If you want to start a specific version set it with `OCIS_DOCKER_TAG=`. Available versions can be found on https://hub.docker.com/r/owncloud/ocis/tags?page=1&ordering=last_updated[Docker Hub].
+
+Set your domain for the Infinite Scale frontend in `OCIS_DOMAIN=`, e.g. OCIS_DOMAIN=ocis.owncloud.test.
+
+If you want to change the OIDC client ID of the ownCloud Web frontend, specify the name with `OCIS_OIDC_CLIENT_ID=`.
+
+Set your domain for the Keycloak administration panel and authentication endpoints with `KEYCLOAK_DOMAIN=`, e.g. KEYCLOAK_DOMAIN=keycloak.owncloud.test.
+
+Changing the used Keycloak realm can be done by setting `KEYCLOAK_REALM=`. This defaults to the Infinite Scale realm KEYCLOAK_REALM=oCIS. The Infinite Scale realm will be automatically imported on startup and includes our demo users.
+
+You should secure your Keycloak admin account by setting `KEYCLOAK_ADMIN_USER=` and `KEYCLOAK_ADMIN_PASSWORD=` to values other than `admin`.
+
+When you're done with the configuration, save the file and start the application stack from the project directory with `docker-compose up -d`. For more details see {docker-compose-url}[Docker Compose].
+
+Check out the other container stacks on GitHub as well and adjust them to your needs.
 
 === Container Orchestration
 
@@ -461,7 +550,7 @@ The pages +
 {swarm-v-kub-2-url}[Kubernetes Vs. Docker Swarm: A Comparison of Containerization Platforms] +
 can give a brief overview of their purpose, advantages and disadvantages of both tools.
 
-// fixme: there should be a link instead the next line to the upcoming kuberetes documentation
+// fixme: there should be a link instead of the next line to the upcoming Kubernetes documentation
  
 For Kubernetes, there are already {helm-charts-ocis-url}[Helm Charts] available that can be used and adjusted.
 
