--- a/modules/ROOT/pages/deployment/index.adoc
+++ b/modules/ROOT/pages/deployment/index.adoc
@@ -1,7 +1,7 @@
 = Deployment
 :toc: right
 
-:description: There are several deployment options for Infinite Scale (Infinite Scale) available. Consider which one serves your purposes best. Generally speaking, you can decide between using Docker containers or manually set up a regular server.
+:description: There are several deployment options for Infinite Scale available. Consider which one serves your purposes best. Generally speaking, you can decide between using Docker containers or manually set up a regular server.
 
 // https://owncloud.dev/ocis/deployment/
 
