--- a/modules/ROOT/pages/deployment/extensions/extension_rules.adoc
+++ b/modules/ROOT/pages/deployment/extensions/extension_rules.adoc
@@ -28,11 +28,25 @@ image::deployment/extensions/concurrence.drawio.svg[width=600]
 
 == Runtime Extensions
 
-You can only fully start or stop the runtime with all its extensions.
+* With the command `ocis server`, all extensions are started with the runtime and share the same PID. If you want to exclude extensions from starting with the runtime, you must define with an environment variable all extension to be started. Those not named will _not_ be started:
++
+[source,bash]
+----
+OCIS_RUN_EXTENSIONS=settings,storage-system, \
+    graph,graph-explorer,idp,ocs,store,thumbnails, \
+    web,webdav,frontend,gateway,users, groups, \
+    auth-basic,auth-bearer,storage-authmachine, \
+    storage-users,storage-shares,storage-publiclink, \
+    app-provider,sharing,proxy,ocdav \
+    ocis server
+----
++
+This is useful if you want to try starting an extension outside the runtime when e.g. testing orchestration.
 
-* You cannot instantiate a runtime extension
-* All runtime extensions are a part of the `ocis server` process and therefore share the same PID.
-* Runtime extensions share the same PID while nonruntime extensions have their own PID.
+* Runtime extension rules
+** You cannot instantiate a runtime extension
+** All runtime extensions are a part of the `ocis server` process and therefore share the same PID.
+** Runtime extensions share the same PID while nonruntime extensions have their own PID.
 
 == Configuration Rules
 
