--- a/modules/ROOT/partials/nav.adoc
+++ b/modules/ROOT/partials/nav.adoc
@@ -8,7 +8,7 @@
 *** xref:deployment/general/general-info.adoc[General Info]
 *** xref:deployment/binary/binary-setup.adoc[Binary Setup]
 *** xref:deployment/container/container-setup.adoc[Container Setup]
-// *** xref:deployment/container/container-setup.adoc[Container Orchestration]
+*** xref:deployment/container/orchestration.adoc[Container Orchestration]
 *** xref:deployment/security/security.adoc[Securing oCIS]
 *** xref:deployment/nfs/nfs.adoc[Network File System Deployment]
 *** xref:deployment/extensions/extensions.adoc[Extensions]
@@ -40,6 +40,7 @@
 **** xref:deployment/extensions/users.adoc[Users]
 **** xref:deployment/extensions/web.adoc[Web]
 **** xref:deployment/extensions/webdav.adoc[WebDAV]
+// *** xref:deployment/deployment/deployment_examples.adoc[Deployment Examples]
 
 ////
 *** xref:deployment/configuration/index.adoc[Configuration]
